// Copyright 2021 The Chromium Authors
// Use of this source code is governed by the Apache v2.0 license that can be
// found in the LICENSE file.

syntax = "proto3";

package crosfleet.crosfleetpb;

import "go.chromium.org/luci/buildbucket/proto/build.proto";
import "infra/unifiedfleet/api/v1/models/machine.proto";
import "infra/unifiedfleet/api/v1/models/machine_lse.proto";

option go_package = "infra/cmd/crosfleet/internal/proto;crosfleetpb";

// DUTInfo contains details about the physical lab setup and machine of a
// particular DUT.
message DUTInfo {
  // The DUT's hostname.
  string Hostname = 1;
  // The DUT's lab setup.
  unifiedfleet.api.v1.models.MachineLSE LabSetup = 2;
  // The DUT's physical machine.
  unifiedfleet.api.v1.models.Machine Machine= 3;
}

message DUTInfoList {
  repeated DUTInfo DUTs = 1;
}

message LeaseInfo {
  // The dut_leaser Buildbucket build.
  buildbucket.v2.Build Build = 2;
  // Information about the leased DUT.
  DUTInfo DUT = 3;
}

message LeaseInfoList {
  repeated LeaseInfo Leases = 1;
}

message BuildIdList {
  repeated int64 Ids = 1;
}

message BuildLaunchList {
  repeated BuildLaunch Launches = 1;
}

message BuildLaunch {
  buildbucket.v2.Build Build = 1;
  string BuildError = 2;
}
